{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "XRRightController",
            "id": "9cd9c337-236f-465f-98e4-5fe9226fd843",
            "actions": [
                {
                    "name": "position",
                    "type": "Value",
                    "id": "b236dec2-b493-4a8c-acfd-08f9e5f8d4ee",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "rotation",
                    "type": "Value",
                    "id": "3e34ed57-e8aa-4baa-a2c8-e90c5b7b6819",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerAxis",
                    "type": "Value",
                    "id": "7e598f47-46ba-41c2-8eae-aec576b2442c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripAxis",
                    "type": "Value",
                    "id": "bb1975ef-fe1e-4271-aafa-e64cf09bd716",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerBtn",
                    "type": "Button",
                    "id": "d237d04b-923d-4624-a0e9-90701f3329d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "612436d9-34f2-4d04-b30d-97b90ce4a171",
                    "path": "<XRController>{RightHand}/pointerPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f803e5f7-18a1-4fc2-957d-6e69db28dcc8",
                    "path": "<XRController>{RightHand}/pointerRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94ba05bd-647e-4cca-b5d9-72264298ee91",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "262a708c-83da-4460-9d75-225580630aef",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f8514ca-acc6-4d2c-a48b-109eec86b6e3",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerBtn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}